// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionModalList should match snapshot for Android 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OptionsModalList
    items={
      Array [
        Object {
          "action": [MockFunction],
          "icon": "camera",
          "text": Object {
            "defaultMessage": "Take Photo or Video",
            "id": "mobile.file_upload.camera",
          },
        },
        Object {
          "action": [MockFunction],
          "icon": "photo",
          "text": Object {
            "defaultMessage": "Photo Library",
            "id": "mobile.file_upload.library",
          },
        },
      ]
    }
    onCancelPress={[MockFunction]}
    title="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "white",
            "borderRadius": 2,
            "marginHorizontal": 30,
          }
        }
      >
        <Component
          style={
            Object {
              "borderBottomColor": "rgba(0, 0, 0, 0.1)",
              "borderBottomWidth": 1,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Take Photo or Video"
              id="mobile.file_upload.camera"
              style={
                Array [
                  Object {
                    "color": "#000",
                    "flex": 1,
                    "fontSize": 16,
                  },
                  undefined,
                ]
              }
            />
            <Icon
              allowFontScaling={false}
              name="camera"
              size={18}
              style={
                Object {
                  "color": "#7f8180",
                }
              }
            />
          </TouchableOpacity>
        </Component>
        <Component
          style={
            Object {
              "borderBottomColor": "rgba(0, 0, 0, 0.1)",
              "borderBottomWidth": 1,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Photo Library"
              id="mobile.file_upload.library"
              style={
                Array [
                  Object {
                    "color": "#000",
                    "flex": 1,
                    "fontSize": 16,
                  },
                  undefined,
                ]
              }
            />
            <Icon
              allowFontScaling={false}
              name="photo"
              size={18}
              style={
                Object {
                  "color": "#7f8180",
                }
              }
            />
          </TouchableOpacity>
        </Component>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 15,
            }
          }
        >
          <FormattedText
            defaultMessage="Cancel"
            id="channel_modal.cancel"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontSize": 16,
              }
            }
          />
        </TouchableOpacity>
      </Component>,
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Take Photo or Video"
                id="mobile.file_upload.camera"
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="camera"
                size={18}
                style={
                  Object {
                    "color": "#7f8180",
                  }
                }
              />
            </TouchableOpacity>
          </Component>,
          <Component
            style={
              Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Photo Library"
                id="mobile.file_upload.library"
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="photo"
                size={18}
                style={
                  Object {
                    "color": "#7f8180",
                  }
                }
              />
            </TouchableOpacity>
          </Component>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Cancel"
              id="channel_modal.cancel"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 16,
                }
              }
            />
          </TouchableOpacity>,
        ],
        "style": Object {
          "alignSelf": "stretch",
          "backgroundColor": "white",
          "borderRadius": 2,
          "marginHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Take Photo or Video"
                id="mobile.file_upload.camera"
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="camera"
                size={18}
                style={
                  Object {
                    "color": "#7f8180",
                  }
                }
              />
            </TouchableOpacity>,
            "style": Object {
              "borderBottomColor": "rgba(0, 0, 0, 0.1)",
              "borderBottomWidth": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                <FormattedText
                  defaultMessage="Take Photo or Video"
                  id="mobile.file_upload.camera"
                  style={
                    Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ]
                  }
                />,
                <Icon
                  allowFontScaling={false}
                  name="camera"
                  size={18}
                  style={
                    Object {
                      "color": "#7f8180",
                    }
                  }
                />,
              ],
              "onPress": [Function],
              "style": Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultMessage": "Take Photo or Video",
                  "id": "mobile.file_upload.camera",
                  "style": Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowFontScaling": false,
                  "name": "camera",
                  "size": 18,
                  "style": Object {
                    "color": "#7f8180",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Photo Library"
                id="mobile.file_upload.library"
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="photo"
                size={18}
                style={
                  Object {
                    "color": "#7f8180",
                  }
                }
              />
            </TouchableOpacity>,
            "style": Object {
              "borderBottomColor": "rgba(0, 0, 0, 0.1)",
              "borderBottomWidth": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                <FormattedText
                  defaultMessage="Photo Library"
                  id="mobile.file_upload.library"
                  style={
                    Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ]
                  }
                />,
                <Icon
                  allowFontScaling={false}
                  name="photo"
                  size={18}
                  style={
                    Object {
                      "color": "#7f8180",
                    }
                  }
                />,
              ],
              "onPress": [Function],
              "style": Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultMessage": "Photo Library",
                  "id": "mobile.file_upload.library",
                  "style": Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowFontScaling": false,
                  "name": "photo",
                  "size": 18,
                  "style": Object {
                    "color": "#7f8180",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <FormattedText
              defaultMessage="Cancel"
              id="channel_modal.cancel"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 16,
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 15,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Cancel",
              "id": "channel_modal.cancel",
              "style": Object {
                "color": "#000",
                "flex": 1,
                "fontSize": 16,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginHorizontal": 30,
            }
          }
        >
          <Component
            style={
              Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Take Photo or Video"
                id="mobile.file_upload.camera"
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="camera"
                size={18}
                style={
                  Object {
                    "color": "#7f8180",
                  }
                }
              />
            </TouchableOpacity>
          </Component>
          <Component
            style={
              Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Photo Library"
                id="mobile.file_upload.library"
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "flex": 1,
                      "fontSize": 16,
                    },
                    undefined,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="photo"
                size={18}
                style={
                  Object {
                    "color": "#7f8180",
                  }
                }
              />
            </TouchableOpacity>
          </Component>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Cancel"
              id="channel_modal.cancel"
              style={
                Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 16,
                }
              }
            />
          </TouchableOpacity>
        </Component>,
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Take Photo or Video"
                  id="mobile.file_upload.camera"
                  style={
                    Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="camera"
                  size={18}
                  style={
                    Object {
                      "color": "#7f8180",
                    }
                  }
                />
              </TouchableOpacity>
            </Component>,
            <Component
              style={
                Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Photo Library"
                  id="mobile.file_upload.library"
                  style={
                    Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="photo"
                  size={18}
                  style={
                    Object {
                      "color": "#7f8180",
                    }
                  }
                />
              </TouchableOpacity>
            </Component>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Cancel"
                id="channel_modal.cancel"
                style={
                  Object {
                    "color": "#000",
                    "flex": 1,
                    "fontSize": 16,
                  }
                }
              />
            </TouchableOpacity>,
          ],
          "style": Object {
            "alignSelf": "stretch",
            "backgroundColor": "white",
            "borderRadius": 2,
            "marginHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Take Photo or Video"
                  id="mobile.file_upload.camera"
                  style={
                    Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="camera"
                  size={18}
                  style={
                    Object {
                      "color": "#7f8180",
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <FormattedText
                    defaultMessage="Take Photo or Video"
                    id="mobile.file_upload.camera"
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "flex": 1,
                          "fontSize": 16,
                        },
                        undefined,
                      ]
                    }
                  />,
                  <Icon
                    allowFontScaling={false}
                    name="camera"
                    size={18}
                    style={
                      Object {
                        "color": "#7f8180",
                      }
                    }
                  />,
                ],
                "onPress": [Function],
                "style": Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "defaultMessage": "Take Photo or Video",
                    "id": "mobile.file_upload.camera",
                    "style": Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowFontScaling": false,
                    "name": "camera",
                    "size": 18,
                    "style": Object {
                      "color": "#7f8180",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Photo Library"
                  id="mobile.file_upload.library"
                  style={
                    Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="photo"
                  size={18}
                  style={
                    Object {
                      "color": "#7f8180",
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <FormattedText
                    defaultMessage="Photo Library"
                    id="mobile.file_upload.library"
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "flex": 1,
                          "fontSize": 16,
                        },
                        undefined,
                      ]
                    }
                  />,
                  <Icon
                    allowFontScaling={false}
                    name="photo"
                    size={18}
                    style={
                      Object {
                        "color": "#7f8180",
                      }
                    }
                  />,
                ],
                "onPress": [Function],
                "style": Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "defaultMessage": "Photo Library",
                    "id": "mobile.file_upload.library",
                    "style": Array [
                      Object {
                        "color": "#000",
                        "flex": 1,
                        "fontSize": 16,
                      },
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowFontScaling": false,
                    "name": "photo",
                    "size": 18,
                    "style": Object {
                      "color": "#7f8180",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <FormattedText
                defaultMessage="Cancel"
                id="channel_modal.cancel"
                style={
                  Object {
                    "color": "#000",
                    "flex": 1,
                    "fontSize": 16,
                  }
                }
              />,
              "onPress": [Function],
              "style": Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Cancel",
                "id": "channel_modal.cancel",
                "style": Object {
                  "color": "#000",
                  "flex": 1,
                  "fontSize": 16,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OptionModalList should match snapshot for iOS 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OptionsModalList
    items={
      Array [
        Object {
          "action": [MockFunction],
          "icon": "camera",
          "text": Object {
            "defaultMessage": "Take Photo or Video",
            "id": "mobile.file_upload.camera",
          },
        },
        Object {
          "action": [MockFunction],
          "icon": "photo",
          "text": Object {
            "defaultMessage": "Photo Library",
            "id": "mobile.file_upload.library",
          },
        },
      ]
    }
    onCancelPress={[MockFunction]}
    title="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "white",
              "borderRadius": 12,
              "marginBottom": 20,
              "marginHorizontal": 20,
            }
          }
        >
          <Component
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                },
                Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                },
              ]
            }
          >
            <Component
              style={
                Object {
                  "color": "#7f8180",
                  "flex": 1,
                  "textAlign": "center",
                }
              }
            >
              test
            </Component>
          </Component>
          <Component
            style={
              Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Take Photo or Video"
                id="mobile.file_upload.camera"
                style={
                  Array [
                    Object {
                      "color": "#4E8ACC",
                      "flex": 1,
                      "fontSize": 20,
                    },
                    undefined,
                    false,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="camera"
                size={18}
                style={
                  Object {
                    "color": "#4E8ACC",
                  }
                }
              />
            </TouchableOpacity>
          </Component>
          <Component
            style={false}
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Photo Library"
                id="mobile.file_upload.library"
                style={
                  Array [
                    Object {
                      "color": "#4E8ACC",
                      "flex": 1,
                      "fontSize": 20,
                    },
                    undefined,
                    false,
                  ]
                }
              />
              <Icon
                allowFontScaling={false}
                name="photo"
                size={18}
                style={
                  Object {
                    "color": "#4E8ACC",
                  }
                }
              />
            </TouchableOpacity>
          </Component>
        </Component>,
        <Component
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "white",
              "borderRadius": 12,
              "marginBottom": 20,
              "marginHorizontal": 20,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Cancel"
              id="channel_modal.cancel"
              style={
                Object {
                  "color": "#CC3239",
                  "flex": 1,
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            />
          </TouchableOpacity>
        </Component>,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "flex-end",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  },
                  Object {
                    "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                    "borderBottomWidth": 1,
                  },
                ]
              }
            >
              <Component
                style={
                  Object {
                    "color": "#7f8180",
                    "flex": 1,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Component>
            </Component>,
            <Component
              style={
                Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Take Photo or Video"
                  id="mobile.file_upload.camera"
                  style={
                    Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="camera"
                  size={18}
                  style={
                    Object {
                      "color": "#4E8ACC",
                    }
                  }
                />
              </TouchableOpacity>
            </Component>,
            <Component
              style={false}
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Photo Library"
                  id="mobile.file_upload.library"
                  style={
                    Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="photo"
                  size={18}
                  style={
                    Object {
                      "color": "#4E8ACC",
                    }
                  }
                />
              </TouchableOpacity>
            </Component>,
          ],
          "style": Object {
            "alignSelf": "stretch",
            "backgroundColor": "white",
            "borderRadius": 12,
            "marginBottom": 20,
            "marginHorizontal": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "children": <Component
                style={
                  Object {
                    "color": "#7f8180",
                    "flex": 1,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Component>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                },
                Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test",
                "style": Object {
                  "color": "#7f8180",
                  "flex": 1,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Take Photo or Video"
                  id="mobile.file_upload.camera"
                  style={
                    Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="camera"
                  size={18}
                  style={
                    Object {
                      "color": "#4E8ACC",
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                "borderBottomWidth": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <FormattedText
                    defaultMessage="Take Photo or Video"
                    id="mobile.file_upload.camera"
                    style={
                      Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ]
                    }
                  />,
                  <Icon
                    allowFontScaling={false}
                    name="camera"
                    size={18}
                    style={
                      Object {
                        "color": "#4E8ACC",
                      }
                    }
                  />,
                ],
                "onPress": [Function],
                "style": Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "defaultMessage": "Take Photo or Video",
                    "id": "mobile.file_upload.camera",
                    "style": Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowFontScaling": false,
                    "name": "camera",
                    "size": 18,
                    "style": Object {
                      "color": "#4E8ACC",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Photo Library"
                  id="mobile.file_upload.library"
                  style={
                    Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="photo"
                  size={18}
                  style={
                    Object {
                      "color": "#4E8ACC",
                    }
                  }
                />
              </TouchableOpacity>,
              "style": false,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <FormattedText
                    defaultMessage="Photo Library"
                    id="mobile.file_upload.library"
                    style={
                      Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ]
                    }
                  />,
                  <Icon
                    allowFontScaling={false}
                    name="photo"
                    size={18}
                    style={
                      Object {
                        "color": "#4E8ACC",
                      }
                    }
                  />,
                ],
                "onPress": [Function],
                "style": Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "defaultMessage": "Photo Library",
                    "id": "mobile.file_upload.library",
                    "style": Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "allowFontScaling": false,
                    "name": "photo",
                    "size": 18,
                    "style": Object {
                      "color": "#4E8ACC",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Cancel"
              id="channel_modal.cancel"
              style={
                Object {
                  "color": "#CC3239",
                  "flex": 1,
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            />
          </TouchableOpacity>,
          "style": Object {
            "alignSelf": "stretch",
            "backgroundColor": "white",
            "borderRadius": 12,
            "marginBottom": 20,
            "marginHorizontal": 20,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <FormattedText
              defaultMessage="Cancel"
              id="channel_modal.cancel"
              style={
                Object {
                  "color": "#CC3239",
                  "flex": 1,
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 15,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Cancel",
              "id": "channel_modal.cancel",
              "style": Object {
                "color": "#CC3239",
                "flex": 1,
                "fontSize": 20,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "white",
                "borderRadius": 12,
                "marginBottom": 20,
                "marginHorizontal": 20,
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  },
                  Object {
                    "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                    "borderBottomWidth": 1,
                  },
                ]
              }
            >
              <Component
                style={
                  Object {
                    "color": "#7f8180",
                    "flex": 1,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Component>
            </Component>
            <Component
              style={
                Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Take Photo or Video"
                  id="mobile.file_upload.camera"
                  style={
                    Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="camera"
                  size={18}
                  style={
                    Object {
                      "color": "#4E8ACC",
                    }
                  }
                />
              </TouchableOpacity>
            </Component>
            <Component
              style={false}
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Photo Library"
                  id="mobile.file_upload.library"
                  style={
                    Array [
                      Object {
                        "color": "#4E8ACC",
                        "flex": 1,
                        "fontSize": 20,
                      },
                      undefined,
                      false,
                    ]
                  }
                />
                <Icon
                  allowFontScaling={false}
                  name="photo"
                  size={18}
                  style={
                    Object {
                      "color": "#4E8ACC",
                    }
                  }
                />
              </TouchableOpacity>
            </Component>
          </Component>,
          <Component
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "white",
                "borderRadius": 12,
                "marginBottom": 20,
                "marginHorizontal": 20,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Cancel"
                id="channel_modal.cancel"
                style={
                  Object {
                    "color": "#CC3239",
                    "flex": 1,
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              />
            </TouchableOpacity>
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "padding": 15,
                    },
                    Object {
                      "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                      "borderBottomWidth": 1,
                    },
                  ]
                }
              >
                <Component
                  style={
                    Object {
                      "color": "#7f8180",
                      "flex": 1,
                      "textAlign": "center",
                    }
                  }
                >
                  test
                </Component>
              </Component>,
              <Component
                style={
                  Object {
                    "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                    "borderBottomWidth": 1,
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "padding": 15,
                    }
                  }
                >
                  <FormattedText
                    defaultMessage="Take Photo or Video"
                    id="mobile.file_upload.camera"
                    style={
                      Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ]
                    }
                  />
                  <Icon
                    allowFontScaling={false}
                    name="camera"
                    size={18}
                    style={
                      Object {
                        "color": "#4E8ACC",
                      }
                    }
                  />
                </TouchableOpacity>
              </Component>,
              <Component
                style={false}
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "padding": 15,
                    }
                  }
                >
                  <FormattedText
                    defaultMessage="Photo Library"
                    id="mobile.file_upload.library"
                    style={
                      Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ]
                    }
                  />
                  <Icon
                    allowFontScaling={false}
                    name="photo"
                    size={18}
                    style={
                      Object {
                        "color": "#4E8ACC",
                      }
                    }
                  />
                </TouchableOpacity>
              </Component>,
            ],
            "style": Object {
              "alignSelf": "stretch",
              "backgroundColor": "white",
              "borderRadius": 12,
              "marginBottom": 20,
              "marginHorizontal": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "children": <Component
                  style={
                    Object {
                      "color": "#7f8180",
                      "flex": 1,
                      "textAlign": "center",
                    }
                  }
                >
                  test
                </Component>,
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  },
                  Object {
                    "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                    "borderBottomWidth": 1,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test",
                  "style": Object {
                    "color": "#7f8180",
                    "flex": 1,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "test",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "padding": 15,
                    }
                  }
                >
                  <FormattedText
                    defaultMessage="Take Photo or Video"
                    id="mobile.file_upload.camera"
                    style={
                      Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ]
                    }
                  />
                  <Icon
                    allowFontScaling={false}
                    name="camera"
                    size={18}
                    style={
                      Object {
                        "color": "#4E8ACC",
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Object {
                  "borderBottomColor": "rgba(0, 0, 0, 0.1)",
                  "borderBottomWidth": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": Array [
                    <FormattedText
                      defaultMessage="Take Photo or Video"
                      id="mobile.file_upload.camera"
                      style={
                        Array [
                          Object {
                            "color": "#4E8ACC",
                            "flex": 1,
                            "fontSize": 20,
                          },
                          undefined,
                          false,
                        ]
                      }
                    />,
                    <Icon
                      allowFontScaling={false}
                      name="camera"
                      size={18}
                      style={
                        Object {
                          "color": "#4E8ACC",
                        }
                      }
                    />,
                  ],
                  "onPress": [Function],
                  "style": Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "defaultMessage": "Take Photo or Video",
                      "id": "mobile.file_upload.camera",
                      "style": Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "allowFontScaling": false,
                      "name": "camera",
                      "size": 18,
                      "style": Object {
                        "color": "#4E8ACC",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "padding": 15,
                    }
                  }
                >
                  <FormattedText
                    defaultMessage="Photo Library"
                    id="mobile.file_upload.library"
                    style={
                      Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ]
                    }
                  />
                  <Icon
                    allowFontScaling={false}
                    name="photo"
                    size={18}
                    style={
                      Object {
                        "color": "#4E8ACC",
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": Array [
                    <FormattedText
                      defaultMessage="Photo Library"
                      id="mobile.file_upload.library"
                      style={
                        Array [
                          Object {
                            "color": "#4E8ACC",
                            "flex": 1,
                            "fontSize": 20,
                          },
                          undefined,
                          false,
                        ]
                      }
                    />,
                    <Icon
                      allowFontScaling={false}
                      name="photo"
                      size={18}
                      style={
                        Object {
                          "color": "#4E8ACC",
                        }
                      }
                    />,
                  ],
                  "onPress": [Function],
                  "style": Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "padding": 15,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "defaultMessage": "Photo Library",
                      "id": "mobile.file_upload.library",
                      "style": Array [
                        Object {
                          "color": "#4E8ACC",
                          "flex": 1,
                          "fontSize": 20,
                        },
                        undefined,
                        false,
                      ],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "allowFontScaling": false,
                      "name": "photo",
                      "size": 18,
                      "style": Object {
                        "color": "#4E8ACC",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "padding": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Cancel"
                id="channel_modal.cancel"
                style={
                  Object {
                    "color": "#CC3239",
                    "flex": 1,
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              />
            </TouchableOpacity>,
            "style": Object {
              "alignSelf": "stretch",
              "backgroundColor": "white",
              "borderRadius": 12,
              "marginBottom": 20,
              "marginHorizontal": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <FormattedText
                defaultMessage="Cancel"
                id="channel_modal.cancel"
                style={
                  Object {
                    "color": "#CC3239",
                    "flex": 1,
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              />,
              "onPress": [Function],
              "style": Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 15,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Cancel",
                "id": "channel_modal.cancel",
                "style": Object {
                  "color": "#CC3239",
                  "flex": 1,
                  "fontSize": 20,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
